force-app/main/default/objects/Emotional_tie__c/Emotional_tie__c.object-meta.xml
<CustomObject>
    <label>Emotional tie</label>
    <nameField>
        <displayFormat>ET-{0000}</displayFormat>
        <label>Emotional tie Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emotional ties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>