force-app/main/default/objects/Emotional_tie__c/fields/Importance_to_Child__c.field-meta.xml
<CustomField>
    <fullName>Importance_to_Child__c</fullName>
    <label>Importance to Child</label>
    <length>255</length>
    <type>Text</type>
</CustomField>