force-app/main/default/objects/Emotional_tie__c/fields/Permanency_Plan__c.field-meta.xml
<CustomField>
    <fullName>Permanency_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permanency Plan</label>
    <referenceTo>Permanency_Plan__c</referenceTo>
    <relationshipLabel>Emotional ties</relationshipLabel>
    <relationshipName>Emotional_ties</relationshipName>
    <type>Lookup</type>
</CustomField>