force-app/main/default/objects/Emotional_tie__c/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <label>Prefix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Lt</fullName>
            </value>
            <value>
                <fullName>Atty</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Capt</fullName>
            </value>
            <value>
                <fullName>Chief</fullName>
            </value>
            <value>
                <fullName>Cmdr</fullName>
            </value>
            <value>
                <fullName>Col</fullName>
            </value>
            <value>
                <fullName>Dean</fullName>
            </value>
            <value>
                <fullName>Dr</fullName>
            </value>
            <value>
                <fullName>Elder</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Gen</fullName>
            </value>
            <value>
                <fullName>Gov</fullName>
            </value>
            <value>
                <fullName>Hon</fullName>
            </value>
            <value>
                <fullName>Lt Col</fullName>
            </value>
            <value>
                <fullName>Maj</fullName>
            </value>
            <value>
                <fullName>MSgt</fullName>
            </value>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Prince</fullName>
            </value>
            <value>
                <fullName>Prof</fullName>
            </value>
            <value>
                <fullName>Rabbi</fullName>
            </value>
            <value>
                <fullName>Rev</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>