force-app/main/default/objects/Emotional_tie__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Emotional ties</relationshipLabel>
    <relationshipName>Emotional_ties</relationshipName>
    <type>Lookup</type>
</CustomField>