force-app/main/default/objects/Emotional_tie__c/fields/Relationship_to_Child__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Child__c</fullName>
    <label>Relationship to Child</label>
    <length>255</length>
    <type>Text</type>
</CustomField>